# instrument-script-server

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  CROSS_PLATFORM_BUILD_RESULTS.md  Makefile  README.md  default.profraw  index.html  instrument_server. log  integration_test. log  mkdocs.yml  test. log  test_daemon. log  vcpkg.json
.cache/clangd/index/: ApiRefResolver.cpp.8320B3AC82BD1630.idx  ApiRefResolver.hpp.0A7B09C15EDD5E68.idx  CommandHandlers.cpp.9F5FB697D3740043.idx  CommandHandlers.hpp.255620E05047BA03.idx  DataBufferManager.cpp.8903A9B2A5CFC1F1.idx  DataBufferManager.hpp.D24F7A12160FB230.idx  DataBufferManager_c_api.cpp.FB4294DF66218FCE.idx  DataBufferManager_c_api.h.0A92246B8F2CD011.idx  HttpRpcServer.cpp.6EF7955101410787.idx  HttpRpcServer.hpp.823CF03B98D6B61D.idx  IPCMessage.hpp.7ED49D019EBC268C.idx  InstrumentRegistry.cpp.62988E5F5D83357F.idx  InstrumentRegistry.hpp.6DFDEF346797297E.idx  InstrumentWorkerProxy.cpp.AEAD99FEF96B5E7B.idx  InstrumentWorkerProxy.hpp.D15DC27513ACC1DC.idx  JobManager.cpp.B92B4537C3919170.idx  JobManager.hpp.4A66EC7A52584FE2.idx  (+87 more)
.github/workflows/: README.md  TESTING.md  arch-linux.yml  deploy-docs.yml  prebuild-mingw-sysroot.yml  release.yml  test-arch.sh  test-windows.sh  windows-direct.yml  windows.yml
ARCHITECTURE/: index.html
CLI_USAGE/: index.html
CONFIGURATION/: index.html
EMBEDDING_API/: index.html
JOB_SCHEDULING/: index.html
PLUGIN_DEVELOPMENT/: index.html
RPC/: index.html
SYNCHRONIZATION/: index.html
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  embedded_schemas.cpp  generate-instrument-config  instrument-server  instrument-worker  template-expander  validate-instrument-api  validate-instrument-config  validate-quantum-dot-config
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  integration_tests[1]_include.cmake  unit_tests[1]_include.cmake
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build-win/tests/: CTestTestfile.cmake  cmake_install.cmake  integration_tests[1]_include.cmake  unit_tests[1]_include.cmake
cmake/: InstrumentServerConfig.cmake.in  Plugin.cmake  instrument-script-schema-config.cmake.in
cmake/toolchains/: mingw-clang-toolchain.cmake.tpl
docs/: ARCHITECTURE.md  CLI_USAGE.md  CONFIGURATION.md  EMBEDDING_API.md  IPC_PROTOCOL.md  JOB_SCHEDULING.md  PLUGIN_DEVELOPMENT.md  RPC.md  SYNCHRONIZATION.md
examples/: one_charge_sensor_quantum_dot_device.yaml
examples/instrument-apis/: agi_34401a.yaml  dso9254a.yaml.tmpl  dso9254a_extended.yaml
examples/instrument-configurations/: agi_34401_config.yaml  dso9254a_config.yaml
examples/plugins/simple_serial/: CMakeLists.txt  README.md  simple_serial.c
examples/scripts/: dc_getset_example.lua
include/instrument-server/: CommandProcessor.hpp  Logger.hpp  SchemaValidator.hpp  SerializedCommand.hpp  export.h  pch.h  schema_validator.hpp  types.hpp  version.hpp
include/instrument_script/: CommandProcessor.hpp  InstrumentRegistry.hpp  InstrumentWorkerProxy.hpp  Logger.hpp  RuntimeContext.hpp  SerializedCommand.hpp
lua_types/: data_handle.lua  domain.lua  instrument_target.lua  runtime_context_1d_waveform.lua  runtime_context_2d_waveform.lua  runtime_context_dc_getset.lua
plugins/visa/: CMakeLists.txt  visa_plugin.c
schemas/: instrument_api.schema.json  instrument_configuration.schema.json  measurement_results.schema.json  quantum_dot_device.schema.json  runtime_contexts.schema.json  system_context.schema.json
scripts/: build-windows.sh
search/: search_index.json
site/CLI_USAGE/: index.html
site/CONFIGURATION/: index.html
site/IPC_PROTOCOL/: index.html
site/search/: search_index.json
src/: Logger.cpp  SchemaValidator.cpp  SerializedCommand.cpp  embedded_schemas.cpp.in  instrument_api_validator_main.cpp  instrument_config_validator_main.cpp  instrument_configuration_generator.cpp  quantum_dot_config_validator_main.cpp  schema_validator.cpp  template_expander.cpp
src/ipc/: DataBufferManager.cpp  DataBufferManager_c_api.cpp  ProcessManager.cpp  SharedQueue.cpp  WorkerProtocol.cpp
src/plugin/: PluginLoader.cpp  PluginRegistry.cpp
src/server/: ApiRefResolver.cpp  CommandHandlers.cpp  HttpRpcServer.cpp  InstrumentRegistry.cpp  InstrumentWorkerProxy.cpp  JobManager.cpp  RuntimeContext.cpp  ServerDaemon.cpp  SyncCoordinator.cpp  instrument_server_main.cpp
src/tools/: instrument_setup.cpp
src/workers/: generic_worker_main.cpp  visa_builtin.cpp
tests/: CMakeLists.txt  test_instrument_registry.cpp  test_ipc.cpp  test_ipc_benchmark.cpp  test_ipc_full.cpp  test_mock_integration.cpp  test_mock_plugin.c  test_plugin.cpp  test_plugin_interface.cpp  test_plugin_loader.cpp  test_serialized_command.cpp  test_validator.cpp  test_worker_integration.cpp  test_worker_protocol.cpp
tests/data/: mock_api.yaml  mock_instrument3.yaml
tests/data/test_scripts/: multiple_returns.lua  return_types.lua  simple_call.lua
tests/integration/: test_cli_commands.cpp  test_daemon_lifecycle.cpp  test_end_to_end.cpp  test_http_rpc_basic.cpp  test_instrument_registry.cpp  test_measure_command.cpp  test_measurement_scripts.cpp  test_parallel_execution.cpp  test_rpc_jobs.cpp  test_rpc_measure_queueing.cpp  test_rpc_server.cpp  test_sync_barrier_unused_instruments.cpp  test_visa_large_data.cpp
tests/mocks/: mock_plugin.cpp  mock_visa_large_data_plugin.c  mock_visa_plugin.c
tests/performance/: test_end_to_end_overhead.cpp  test_ipc_throughput.cpp  test_sync_overhead.cpp
tests/test_utils/: MockInstrument.cpp  MockInstrument.hpp  PlatformPaths.hpp  PluginTestFixture.hpp  TestFixtures.cpp  TestFixtures.hpp
tests/unit/: test_api_lookup.cpp  test_api_ref_resolution.cpp  test_data_buffer_manager.cpp  test_ipc_queue.cpp  test_plugin_loader.cpp  test_plugin_loading.cpp  test_plugin_registry.cpp  test_runtime_context.cpp  test_runtime_context_generic.cpp  test_schema_validator.cpp  test_serialization.cpp  test_server_daemon.cpp  test_sync_coordinator.cpp
(+40 files in other folders)
